--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -12,175 +12,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/html": [
-              "<!DOCTYPE html>\r\n",
-              "<html lang=\"en\">\r\n",
-              "  <head>\r\n",
-              "    <meta charset=\"UTF-8\" />\r\n",
-              "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />\r\n",
-              "    <title>Nvidia Search Engine</title>\r\n",
-              "    <link\r\n",
-              "      rel=\"stylesheet\"\r\n",
-              "      href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css\"\r\n",
-              "    />\r\n",
-              "    <link rel=\"stylesheet\" href=\"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\" />\r\n",
-              "    <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js\"></script>\r\n",
-              "    <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js\"></script>\r\n",
-              "    <script src=\"https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js\"></script>\r\n",
-              "    <script>\r\n",
-              "      const firebaseConfig = {\r\n",
-              "        apiKey: \"AIzaSyAZvGft4R9ax1o2XNk4FmJ2X07WuvUyNO4\",\r\n",
-              "        authDomain: \"class-presentation-79426.firebaseapp.com\",\r\n",
-              "        databaseURL: \"https://class-presentation-79426-default-rtdb.europe-west1.firebasedatabase.app\",\r\n",
-              "        projectId: \"class-presentation-79426\",\r\n",
-              "        storageBucket: \"class-presentation-79426.appspot.com\",\r\n",
-              "        messagingSenderId: \"698863119421\",\r\n",
-              "        appId: \"1:698863119421:web:5ad514ecb5f35bc9d80e54\",\r\n",
-              "        measurementId: \"G-HLSHVVW5K1\",\r\n",
-              "      };\r\n",
-              "      firebase.initializeApp(firebaseConfig);\r\n",
-              "      var db = firebase.database();\r\n",
-              "    </script>\r\n",
-              "    <style></style>\r\n",
-              "  </head>\r\n",
-              "\r\n",
-              "  <body class=\"light-theme\">\r\n",
-              "    <div class=\"wrapper\">\r\n",
-              "      <div class=\"navbar\">\r\n",
-              "        <div class=\"logo\">\r\n",
-              "          <i class=\"fas fa-microchip\"></i>\r\n",
-              "          <span>Nvidia Search Engine</span>\r\n",
-              "        </div>\r\n",
-              "        <div class=\"nav-links\">\r\n",
-              "          <a onclick=\"switchPage('searchPage')\">Search</a>\r\n",
-              "          <div class=\"dropdown\">\r\n",
-              "            <span class=\"dropbtn\">Index</span>\r\n",
-              "            <div class=\"dropdown-content\">\r\n",
-              "              <a onclick=\"switchPage('addIndexPage')\">Add New Index</a>\r\n",
-              "              <a onclick=\"switchPage('editIndexPage')\">Edit Index</a>\r\n",
-              "            </div>\r\n",
-              "          </div>\r\n",
-              "          <a onclick=\"switchPage('statisticsPage')\">Statistics</a>\r\n",
-              "          <span class=\"theme-toggle\" onclick=\"toggleTheme()\">Toggle Theme</span>\r\n",
-              "        </div>\r\n",
-              "      </div>\r\n",
-              "\r\n",
-              "      <div id=\"searchPage\" class=\"search-container active\">\r\n",
-              "        <input\r\n",
-              "          type=\"text\"\r\n",
-              "          id=\"searchQuery\"\r\n",
-              "          class=\"search-box\"\r\n",
-              "          placeholder=\"Search Nvidia products, news, or information...\"\r\n",
-              "        />\r\n",
-              "\r\n",
-              "        <button\r\n",
-              "          id=\"searchButton\"\r\n",
-              "          onclick=\"toggleLinksPerPageVisibility(); search();\"\r\n",
-              "          class=\"search-button\"\r\n",
-              "        >\r\n",
-              "          Search\r\n",
-              "        </button>\r\n",
-              "        <button\r\n",
-              "          onclick=\"clearSearch()\"\r\n",
-              "          class=\"clear-button\"\r\n",
-              "          style=\"background-color: #888\"\r\n",
-              "        >\r\n",
-              "          Clear\r\n",
-              "        </button>\r\n",
-              "        <div id=\"searchResults\" class=\"search-results\"></div>\r\n",
-              "\r\n",
-              "        <!-- Pagination Controls -->\r\n",
-              "        <div id=\"pagination\"></div>\r\n",
-              "      </div>\r\n",
-              "      <!-- Dropdown for selecting number of links per page -->\r\n",
-              "      <div id=\"linksPerPageContainer\">\r\n",
-              "        <span id=\"linksPerPageText\">Links per page:</span>\r\n",
-              "        <select id=\"linksPerPage\" onchange=\"search()\">\r\n",
-              "          <option value=\"5\">5</option>\r\n",
-              "          <option value=\"10\">10</option>\r\n",
-              "          <option value=\"20\">20</option>\r\n",
-              "          <option value=\"50\">50</option>\r\n",
-              "        </select>\r\n",
-              "      </div>\r\n",
-              "\r\n",
-              "      <div id=\"editIndexPage\" class=\"container\">\r\n",
-              "        <h2>Edit Index</h2>\r\n",
-              "        <div class=\"form-container\">\r\n",
-              "          <input\r\n",
-              "            type=\"text\"\r\n",
-              "            id=\"editTerm\"\r\n",
-              "            class=\"input-field\"\r\n",
-              "            placeholder=\"Existing term\"\r\n",
-              "          />\r\n",
-              "          <input\r\n",
-              "            type=\"text\"\r\n",
-              "            id=\"editdocIds\"\r\n",
-              "            class=\"input-field\"\r\n",
-              "            placeholder=\"DocIDs (comma-separated)\"\r\n",
-              "          />\r\n",
-              "          <button class=\"btn\" onclick=\"editTerm()\">Edit Term</button>\r\n",
-              "        </div>\r\n",
-              "        <h2 id=\"editMessage\"></h2>\r\n",
-              "      </div>\r\n",
-              "\r\n",
-              "      <div id=\"addIndexPage\" class=\"container\">\r\n",
-              "        <h2>Add term</h2>\r\n",
-              "        <div class=\"form-container\">\r\n",
-              "          <input\r\n",
-              "            type=\"text\"\r\n",
-              "            id=\"newTerm\"\r\n",
-              "            class=\"input-field\"\r\n",
-              "            placeholder=\"New term\"\r\n",
-              "          />\r\n",
-              "          <input\r\n",
-              "            type=\"text\"\r\n",
-              "            id=\"docIds\"\r\n",
-              "            class=\"input-field\"\r\n",
-              "            placeholder=\"DocIDs (comma-separated)\"\r\n",
-              "          />\r\n",
-              "          <button class=\"btn\" onclick=\"addTerm()\">Add Term</button>\r\n",
-              "        </div>\r\n",
-              "        <h2 id=\"addMessage\"></h2>\r\n",
-              "      </div>\r\n",
-              "\r\n",
-              "      <div id=\"statisticsPage\" class=\"container\">\r\n",
-              "        <h2 class=\"stats-header\">Index Statistics</h2>\r\n",
-              "        <div class=\"stats-list\">\r\n",
-              "          <p id=\"totalTerms\">Total Terms: Calculating...</p>\r\n",
-              "          <p id=\"termMostLinks\">Term with Most Links: Calculating...</p>\r\n",
-              "          <p id=\"totalLinks\">Total Links: Calculating...</p>\r\n",
-              "          <p id=\"ascriptsPerTerm\">Average Links per Term: Calculating...</p>\r\n",
-              "        </div>\r\n",
-              "      </div>\r\n",
-              "\r\n",
-              "      <!-- Footer -->\r\n",
-              "      <div class=\"footer\">\r\n",
-              "        <div class=\"copyright\">\r\n",
-              "          <p>&copy; Braude's Nvidia Search Engine. All rights reserved.</p>\r\n",
-              "        </div>\r\n",
-              "        <div class=\"footer-options\">\r\n",
-              "          <button onclick=\"changeFontSize('increase')\">\r\n",
-              "            Increase Font Size\r\n",
-              "          </button>\r\n",
-              "          <button onclick=\"changeFontSize('decrease')\">\r\n",
-              "            Decrease Font Size\r\n",
-              "          </button>\r\n",
-              "        </div>\r\n",
-              "      </div>\r\n",
-              "    </div>\r\n",
-              "\r\n",
-              "    <script src=\"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"></script>\r\n",
-              "    <!-- <script src=\"./frontend/api.js\"></script> -->\r\n",
-              "  </body>\r\n",
-              "</html>\r\n"
+              "\n",
+              "        <iframe\n",
+              "            width=\"100%\"\n",
+              "            height=\"550\"\n",
+              "            src=\"https://amir3x0.github.io/Cloud-Project-Nvidia/index.html\"\n",
+              "            frameborder=\"0\"\n",
+              "            allowfullscreen\n",
+              "            \n",
+              "        ></iframe>\n",
+              "        "
             ],
             "text/plain": [
-              "<IPython.core.display.HTML object>"
+              "<IPython.lib.display.IFrame at 0x23aa9088e90>"
             ]
           },
           "metadata": {},
@@ -190,24 +40,12 @@
       "source": [
         "import requests\n",
         "from IPython.display import HTML\n",
+        "from IPython.display import IFrame\n",
         "\n",
-        "# The URL of your GitHub Pages site\n",
         "url = 'https://amir3x0.github.io/Cloud-Project-Nvidia/index.html'\n",
         "\n",
-        "# Fetch the page content\n",
-        "response = requests.get(url)\n",
         "\n",
-        "# Ensure the request was successful\n",
-        "if response.status_code == 200:\n",
-        "    html_content = response.text\n",
-        "    github_pages_css_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/style.css\"\n",
-        "    html_content = html_content.replace(\"style.css\", github_pages_css_url)\n",
-        "    github_pages_js_url = \"https://amir3x0.github.io/Cloud-Project-Nvidia/script.js\"\n",
-        "    html_content = html_content.replace(\"script.js\", github_pages_js_url)\n",
-        "\n",
-        "    display(HTML(html_content))\n",
-        "else:\n",
-        "    print(f\"Failed to fetch the page: {response.status_code}\")"
+        "display(IFrame(url, width='100%', height=550))\n"
       ]
     }
   ],
